welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: ')' expected but ';' found.
  if (Math.min(a,b;c) <= 10+Math.max(a,b,c)) {return true} else {false}}  
                  ^lessBy10:2: error: ';' expected but ')' found.
  if (Math.min(a,b;c) <= 10+Math.max(a,b,c)) {return true} else {false}}  
                    ^