welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
  if (Math.min(a,b;c) <= 10+Math.max(a,b,c)) {return true} else {false}} 